clang/test/BSC/Negative/Ownership/RuleCheck/Maple/if/if.cbs
// RUN: %clang_cc1 -verify %s

int rand();

void func1(int * _Owned argA, int * _Owned argB) {
    int * _Owned a;
    if (rand()) {
        a = argA;
    } else {
        a = argB;
    }
} // expected-error {{memory leak of value: `argA`}} expected-error {{memory leak of value: `argB`}} expected-error {{memory leak of value: `a`}}

void func2(int * _Owned argA, int * _Owned argB) {
    int * _Owned a;
    if (rand()) {
        a = argA;
    } else {
    }
    int * _Owned b = a; // expected-error {{use of possibly uninitialized value: `a`}}
} // expected-error {{memory leak of value: `argA`}} expected-error {{memory leak of value: `argB`}} expected-error {{memory leak of value: `b`}}

void func3(int * _Owned argA, int * _Owned argB) {
    int * _Owned a;
    if (rand()) {
        a = argA;
    } else {
    }
    int * _Owned b = argA; // expected-error {{use of moved value: `argA`}}
} // expected-error {{memory leak of value: `b`}} expected-error {{memory leak of value: `a`}} expected-error {{memory leak of value: `argB`}}

void func4(int local) {
    int * _Owned a = __take_from_raw(&local);
    int * _Owned b;
    switch (rand()) {
        case 0: {
            break;
        }
        case 1: {
            b = a;
            break;
        }
        case 4: {
            b = a;
            break;
        }
        case 5: {
            break;
        }
        default:
            break;
    }
    b = __take_from_raw(&local); // expected-error {{assign to _Owned value: `b`}}
} // expected-error {{memory leak of value: `b`}} expected-error {{memory leak of value: `a`}}

void func5(int * _Owned argA, int * _Owned argB) {
    int * _Owned a;
    int * _Owned b;
    if (rand()) {
        a = argA;
        if (rand()) {
            b = a;
        }
    } else {
        b = argB;
    }
    b = a; // expected-error {{assign to _Owned value: `b`}} expected-error {{use of moved value: `a`}}
} // expected-error {{memory leak of value: `b`}} expected-error {{memory leak of value: `argA`}} expected-error {{memory leak of value: `argB`}}
